qtspell 1.0 (Jan 14 2022):
* Add Qt6 support
* Fix undo/redo not correctly re-enabled after detach/attach
* Fix crash when invoking TextEditChecker::checkSpelling in non-attached state

qtspell 0.9.0 (Mar 21 2020):
* Fix broken add to dictionary / ignore word
* Drop Qt4 support

qtspell 0.8.5 (Jun 15 2018):
* Adapt language code decoding for enchant-2.x
* Don't use deprecated QT5_USE_MODULES

qtspell 0.8.4 (Dec 15 2017):
* Correctly detect enchant2 < 2.1.3

qtspell 0.8.3 (Dec 15 2017):
* Decode language code also if only the language portion is specified
* Workaround SpellcheckUnderline not working with certain themes by using WaveUnderline instead
* Add support for enchant2

qtspell 0.8.2 (Sep 08 2016):
* Fix ampersands of mnemonics ending up in replaced text when picking suggestion from context menu

qtspell 0.8.1 (Nov 16 2015):
* Fix encoding issues in strings returned by Checker::getSpellingSuggestions

qtspell 0.8.0 (Oct 16 2015):
* Add QtSpell::TextEditChecker::setNoSpellingPropertyId
* Add QtSpell::checkLanguageInstalled
* Make TextEditChecker::clearUndoRedo a slot

qtspell 0.7.4 (May 25 2015):
* Fix spelling not working with certain languages

qtspell 0.7.3 (Apr 07 2015):
* Only reset underline style when clearing error style

qtspell 0.7.2 (Mar 30 2015):
* Ensure both words resulting from separating a compound word are checked

qtspell 0.7.1 (Feb 08 2015):
* Fix z key press getting eaten

qtspell 0.7.0 (Feb 05 2015):
* Install event filter to override the builtin undo/redo
* Ensure cursor visible after undo/redo

qtspell 0.6.0 (Dec 27 2014):
* Workaround issue where QTextDocument reports incorrect added/removed counts
* Fix crash when enabling undo/redo but no textedit is attached
* Fix text changed by undo/redo not being checked for spelling
* Don't merge delete + insert undo/redo steps

qtspell 0.5.0 (Dec 12 2014):
* Reworked undo/redo
* Many translations

qtspell 0.4.0 (Nov 26 2014):
* Windows support (through MinGW)