@@ -3,7 +3,7 @@ cmake_policy(SET CMP0063 NEW)
 
 # Project properties
 PROJECT(qtspell)
-SET(QTSPELL_VERSION 1.0)
+SET(QTSPELL_VERSION 1.0.1)
 set(CMAKE_C_VISIBILITY_PRESET hidden)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
