@@ -1,3 +1,6 @@
+qtspell 1.0.1 (Jan 14 2022):
+* Fix broken pkg-config file
+
 qtspell 1.0 (Jan 14 2022):
 * Add Qt6 support
 * Fix undo/redo not correctly re-enabled after detach/attach
